--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ title: Home
 ---
 
 <section class="hero-section">
-    <div class="animate-fade-in-up">
+    <canvas id="hero-canvas"
+        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: -1;"></canvas>
+    <div class="animate-fade-in-up" style="position: relative; z-index: 1;">
         <h1>{{ site.data.personal.name }}</h1>
         <p class="subtitle">{{ site.data.personal.role }}</p>
         <div style="display: flex; gap: 1rem; justify-content: center;">
@@ -16,11 +18,11 @@ title: Home
 
 <section class="container" style="padding-bottom: var(--spacing-xl);">
     <h2 class="section-title">About Me</h2>
-    style="background: var(--glass-bg); padding: var(--spacing-md); border-radius: 16px; backdrop-filter: blur(10px);
-    border: 1px solid var(--glass-border);">
-    <p style="font-size: 1.1rem; color: var(--text-muted); max-width: 800px; margin: 0 auto; text-align: center;">
-        {{ site.data.personal.bio }}
-    </p>
+    <div class="glass-panel"
+        style="background: var(--glass-bg); padding: var(--spacing-md); border-radius: 16px; backdrop-filter: blur(10px); border: 1px solid var(--glass-border);">
+        <p style="font-size: 1.1rem; color: var(--text-muted); max-width: 800px; margin: 0 auto; text-align: center;">
+            {{ site.data.personal.bio }}
+        </p>
     </div>
 </section>
 
