--- a/index.html
+++ b/index.html
@@ -42,21 +42,32 @@ title: Home
 <section class="container">
     <h2 class="section-title">Featured Projects</h2>
     <div class="project-grid">
-        {% for project in site.data.projects limit:3 %}
-        <div class="card">
-            <h3>{{ project.name }}</h3>
-            <p>{{ project.description }}</p>
-            <div class="tags">
-                {% for tag in project.tags %}
-                <span>{{ tag }}</span>
-                {% endfor %}
+        {% for project in site.projects limit:3 %}
+        <a href="{{ project.url | relative_url }}" style="text-decoration: none; display: block;">
+            <div class="project-card">
+                <div class="card-visual">
+                    {% if project.teaser %}
+                    <img src="{{ project.teaser | relative_url }}" alt="{{ project.title }} Visual"
+                        style="width: 60%; height: 60%; object-fit: contain;">
+                    {% else %}
+                    <div class="tech-circle"></div>
+                    {% endif %}
+                </div>
+                <div class="card-content">
+                    <h3 class="card-title">{{ project.title }}</h3>
+                    <p class="card-desc">{{ project.description | truncate: 100 }}</p>
+                    <div class="card-tags">
+                        {% for tag in project.tags limit:3 %}
+                        <span class="card-tag">{{ tag }}</span>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
-        </div>
+        </a>
         {% endfor %}
     </div>
     <div style="text-align: center; margin-top: var(--spacing-md);">
-        <a href="{{ '/projects/' | relative_url }}" style="color: #4F46E5; font-weight: 500;">View All Projects
-            &rarr;</a>
+        <a href="{{ '/projects/' | relative_url }}" class="button secondary">View All Projects &rarr;</a>
     </div>
 </section>
 
